2002-08-20  Ben Sigelman  <bhsigelm@cs.brown.edu>

	* event-Xt.c (drain_X_queue): loop over while(XEventsQueued())
	instead of while(XtAppPending()&XtIMXEvent).  Upon a gdm logout,
	the xemacs process did not exit, but looped infinitely here.  This
	fixes that problem.

2002-10-04  Stephen J. Turnbull  <stephen@xemacs.org>

	* regex.c (re_match_2_internal): Declare num_nonshy_regs in
	enclosing scope.

2002-09-09  Stephen J. Turnbull  <stephen@xemacs.org>

	* search.c (clear_unused_search_regs): New static function.
	(search_buffer): 
	(simple_search): 
	(boyer_moore):
	Use it.  Fixes "stale match data" bug reported by Martin Stjernholm.
	Minor clarifications in comments.

	* regex.c (re_match_2_internal): Ensure no stale submatches.

2002-09-26  Golubev I. N.  <gin@mo.msk.ru>

	* frame-x.c (x_delete_frame): do not call XtDisplay on a destroyed
	widget.

2002-09-22  Mike Sperber <mike@xemacs.org>

	* specifier.c (specifier_add_spec): Don't do anything if NILP
	(inst_list)---otherwise, assertions in the rest of the specifier
	code get violated.

2002-09-20  Mike Sperber <mike@xemacs.org>

	(This partially gets back my patch from 2002-07-20 without the
	bug.)
	* process-unix.c (child_setup): Remove Ben's comment noting
	confusion over the file descriptors >= 3: close_process_descs()
	doesn't close all.  Fix fd range to go up to MAXDESC-1 instead
	of 64.
	(unix_create_process): Call begin_dont_check_for_quit to inhibit
	unwanted interaction (and thus breaking of X event synchronicity)
	in the child.

2002-08-08  Jerry James  <james@xemacs.org>

	* Makefile.in.in: ldap.o and postgresql.o have moved.
	* alloc.c (unstaticpro_nodump_1): New function.
	* alloc.c (unstaticpro_nodump): Ditto.
	* depend: Regenerate.
	* eldap.c: Move to modules/ldap.
	* eldap.h: Ditto.
	* emacs.c (main_1): Call LDAP and PostgreSQL initialization
	functions only if they are not modules.
	* emodules.c: Define EMODULES_DO_NOT_REDEFINE to skip changes to