@@ -1,3 +1,8 @@
+2002-09-21  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* extents.c (Fset_extent_property): Document `syntax-table'
+	property.
+
 2002-08-20  Ben Sigelman  <bhsigelm@cs.brown.edu>
 
 	* event-Xt.c (drain_X_queue): loop over while(XEventsQueued())
